--- a/app/views/time_entries/_form.html.erb
+++ b/app/views/time_entries/_form.html.erb
@@ -23,6 +23,14 @@
     <%= f.label :note %><br />
     <%= f.text_area :note %>
   </div>
+  <div class="field">
+    <%= f.label :milestone %><br />
+    <%= f.select :milestone_id, Milestone.all.collect{|m| [m.id]} %>
+  </div>
+  <div class="field">
+    <%= f.label :user %><br />
+    <%= f.select :user_id, User.all.collect{|u| [u.first_name, u.id]} %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
